--- a/requirements.txt
+++ b/requirements.txt
@@ -5,7 +5,30 @@ Flask-WTF==0.11
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
+mercurial==2.4.1.post20121207
+nose==1.3.4
+numpy==1.7.0
+pathtools==0.1.2
+pbr==1.8.0
+pexpect==2.4
+Pygments==1.5
+Pymacs==0.25
+pyOpenSSL==0.11
+pyPdf==1.13
+python-mode.el==6.1.1
+PyYAML==3.10
+pyzmq==13.0.2
+readline==6.2.4.1
+six==1.9.0
+Sphinx==1.1.3
+spyder==2.2.0.dev0
 SQLAlchemy==1.0.12
-Werkzeug==0.11.4
-wheel==0.26.0
+stevedore==1.8.0
+Twisted==12.3.0.post37085
+virtualenv==14.0.5
+virtualenv-clone==0.2.6
+virtualenvwrapper==4.7.1
+watchdog==0.6.0
+Werkzeug==0.11.5
 WTForms==2.1
+zope.interface==4.0.3
