--- a/requirements.txt
+++ b/requirements.txt
@@ -1,11 +1,16 @@
+bcrypt==2.0.0
+cffi==1.5.2
 coverage==3.7.1
 Flask==0.10.1
+Flask-Bcrypt==0.7.1
 Flask-SQLAlchemy==2.0
 Flask-WTF==0.11
 itsdangerous==0.24
 Jinja2==2.8
 MarkupSafe==0.23
+nose==1.3.4
+pycparser==2.14
+six==1.10.0
 SQLAlchemy==1.0.12
 Werkzeug==0.11.4
-wheel==0.26.0
 WTForms==2.1
